<resources>
    <string name="app_name">Weather</string>
    <string name="input">Input name city</string>
    <string name="city">City:</string>
    <string name="country">Country</string>
    <string name="temp">Temp</string>
    <string name="status">Status</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Cloud</string>
    <string name="wind">Wind</string>
    <string name="date">Last Date</string>
    <string name="daily">Daily forecast</string>
</resources>
