<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/icon1"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/input"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/btntimkiem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:background="@null"
            android:padding="2dp"
            android:src="@drawable/searchb" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:textSize="30dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/city"/>
            <TextView
                android:id="@+id/txttp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="30dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="30dp"
                android:text="@string/country"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:id="@+id/txtqg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="30dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgmay"
            android:layout_width="0dp"
            android:layout_height="137dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/cloudse" />

    <TextView
        android:layout_weight="1"
        android:id="@+id/txtnhietdo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/temp"
        android:textColor="#f20"
        android:textSize="30dp" />
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:textSize="25dp"
        android:layout_marginTop="2dp"
        android:id="@+id/txttrangthai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status" />

    <LinearLayout
        android:layout_marginTop="68dp"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/dropa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20dp"
                android:text="@string/humidity"
                android:id="@+id/txtdrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="63dp"
                android:layout_height="64dp"
                android:src="@drawable/may" />
            <TextView
                android:textSize="20dp"
                android:text="@string/cloud"
                android:id="@+id/txtcloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="77dp"
                android:layout_height="62dp"
                android:src="@drawable/sas1" />
            <TextView
                android:textSize="20dp"
                android:text="@string/wind"
                android:id="@+id/txtwind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:textColor="#0a0a0a"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/date"
        android:id="@+id/txtday"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnnext"
        android:layout_width="250dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="40dp"
        android:background="#11FFB4"
        android:text="@string/daily"
        android:textSize="20dp" />
</LinearLayout>